[package]
name = "icp_ibc_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers

thiserror = "1"
log = "0.4"
hex = "0.4.3"
sha2 = "0.10.6"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.1.0", features = ["json"] }
k256 = { version = "0.12.0", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }

# for IBC Protocol
ibc = { version = "0.47.0", default-features = false,  features = [
   "borsh",
   "schema",
   "serde",
]}
ibc-proto = { version = "0.37.1", default-features = false }
prost = { version = "0.12", default-features = false }
parking_lot = { version = "0.12.1", default-features = false}
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display", "try_into"] }
# log deps
ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", tag = "v0.5.x" }
typed-builder = { version = "0.17.0" }

[dependencies.tendermint]
version = "0.34"
default-features = false

[dependencies.tendermint-proto]
version = "0.34"
default-features = false

[dependencies.tendermint-testgen]
version = "0.34"
default-features = false
